--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.5.2",
     "core-js": "3.6.5",
     "echarts": "^4.9.0",
+    "el-table-infinite-scroll": "^1.0.10",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "jsbarcode": "^3.11.3",
