--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@zxing/library": "^0.18.3",
     "axios": "0.18.1",
     "bootstrap": "^4.5.2",
     "core-js": "3.6.5",
@@ -23,14 +24,18 @@
     "file-saver": "^2.0.2",
     "js-cookie": "2.2.0",
     "jsbarcode": "^3.11.3",
+    "jsqr": "^1.3.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "qrcode-decoder": "^0.1.2",
     "v-charts": "^1.19.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
+    "vue-virtual-scroller": "^1.0.10",
     "vuex": "3.1.0",
-    "xlsx": "^0.16.8"
+    "xlsx": "^0.16.8",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
