--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "qrcode-decoder": "^0.1.2",
+    "umy-ui": "^1.1.6",
     "v-charts": "^1.19.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
