--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@handsontable/vue": "^11.0.1",
     "@zxing/library": "^0.18.3",
     "axios": "0.18.1",
     "bootstrap": "^4.5.2",
@@ -22,6 +23,7 @@
     "el-table-infinite-scroll": "^1.0.10",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.2",
+    "handsontable": "^11.0.1",
     "js-cookie": "2.2.0",
     "jsbarcode": "^3.11.3",
     "jsqr": "^1.3.1",
