--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@handsontable/vue": "^11.0.1",
+    "@jiaminghi/data-view": "^2.10.0",
     "@zxing/library": "^0.18.3",
     "axios": "0.18.1",
     "bootstrap": "^4.5.2",
