--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "0.18.1",
     "bootstrap": "^4.5.2",
     "core-js": "3.6.5",
+    "dhtmlx-gantt": "^7.1.12",
     "echarts": "^4.9.0",
     "el-table-infinite-scroll": "^1.0.10",
     "element-ui": "2.13.2",
@@ -48,7 +49,7 @@
     "@vue/cli-service": "4.4.4",
     "@vue/test-utils": "1.0.0-beta.29",
     "autoprefixer": "9.5.1",
-    "babel-eslint": "10.1.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "23.6.0",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-dynamic-import-node": "2.3.3",
