--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "element-ui": "2.13.2",
     "file-saver": "^2.0.2",
     "handsontable": "^11.0.1",
+    "html2canvas": "^1.4.1",
     "js-cookie": "2.2.0",
     "jsbarcode": "^3.11.3",
     "jsqr": "^1.3.1",
